<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:hint="Test hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </android.support.design.widget.TextInputLayout>

        <EditText
            android:id="@+id/et_main_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/et_main_pseudo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_pseudo"
            android:inputType="text" />

        <EditText
            android:id="@+id/et_main_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/et_main_lastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_last_name"
            android:inputType="text" />

        <EditText
            android:id="@+id/et_main_firstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_first_name"
            android:inputType="text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_genre" />

        <RadioGroup
            android:id="@+id/rg_main_genre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="16dp">

            <RadioButton
                android:id="@+id/rb_main_man"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/option_man" />

            <RadioButton
                android:id="@+id/rb_main_woman"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/option_woman" />

            <RadioButton
                android:id="@+id/rb_main_other"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/option_other" />

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_date_of_birth" />

        <DatePicker
            android:id="@+id/dp_main_dateofbirth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:calendarViewShown="false"
            android:datePickerMode="spinner"
            android:spinnersShown="true" />

        <EditText
            android:id="@+id/et_main_bio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top|start"
            android:hint="@string/hint_bio"
            android:inputType="textMultiLine"
            android:lines="3" />

        <CheckBox
            android:id="@+id/cb_main_terms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:padding="8dp"
            android:text="@string/text_i_agree_with_the_terms" />

        <Button
            android:id="@+id/btn_main_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="16dp"
            android:text="@string/btn_submit" />

    </LinearLayout>

</ScrollView>